--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,5 +13,5 @@ jobs:
       run: docker login hub.docker.com -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag graph-nest:0.0.1
-    - name: Deploy
+    - name: Deploy to DockerHub
       run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/${{secrets.DOCKER_HUB_REPOSITORY_NAME}}:latest
