--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag graph-nest:0.0.1
       - name: Deploy to DockerHub
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/${{secrets.DOCKER_HUB_REPOSITORY_NAME}}:latest
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/nest-graphql:latest
